<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="114dp"
    android:layout_marginTop="0dp"
    android:layout_marginBottom="0dp">

    <TextView
        android:id="@+id/rightPrens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/rightPrens"
        android:textColor="#9F2B68"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/mainPartyOfOfficial"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.703" />

    <TextView
        android:id="@+id/mainOfficeOfOfficial"
        android:layout_width="295dp"
        android:layout_height="25dp"
        android:layout_marginTop="4dp"
        android:textColor="#9F2B68"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.853"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141" />

    <TextView
        android:id="@+id/mainNameOfOfficial"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:textAlignment="textStart"
        android:textColor="#9F2B68"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.325"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.739" />

    <ImageView
        android:id="@+id/seperator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/seperator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.943"
        app:srcCompat="@drawable/separator" />

    <ImageView
        android:id="@+id/mainImageOfOfficial"
        android:layout_width="74dp"
        android:layout_height="75dp"
        android:contentDescription="@string/photo_of_official"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41"
        app:srcCompat="@drawable/missing"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/leftPrens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="4dp"
        android:text="@string/leftPrens"
        android:textColor="#9F2B68"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toEndOf="@+id/mainNameOfOfficial"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.735" />

    <TextView
        android:id="@+id/mainPartyOfOfficial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:textColor="#9F2B68"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/leftPrens"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.771" />
</androidx.constraintlayout.widget.ConstraintLayout>